HIL/src/objects/Note_Joiner__c.object
<CustomObject>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client &amp; Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Note__r.ActivityDate__c</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Member</label>
        <referenceTo>Group_Member__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Note</label>
        <referenceTo>Note__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>HYPERLINK(Note__c, Note__r.Subject_Text__c)</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Note__r.Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Note Joiner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client_Prospect__c</columns>
        <columns>Note__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Note Joiner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Joiners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>